[project]
name = "video-scene-bot"
version = "0.1.0"
description = "Telegram bot for video scene detection"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python==0.2.0",
    "opencv-python-headless==4.11.0.86",
    "python-telegram-bot==21.10",
    "pytube==15.0.0",
    "scenedetect==0.6.5.2",
    "yt-dlp==2025.2.19"
]