[project]
name = "video-scene-bot"
version = "0.1.0"
description = "Telegram bot for video scene detection"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python==0.2.0",
    "httpx>=0.25.2",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "psutil>=7.0.0",
    "python-telegram-bot[httpx]==20.7",
    "pytube==15.0.0",
    "requests>=2.32.3",
    "scenedetect==0.6.5.2",
    "telegram>=0.0.1",
    "yt-dlp==2025.2.19",
]
